{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 20,
  "lineage": "9c394747-be74-820a-ab2c-1735c295a968",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:network-acl/acl-0a3a5097d1f8dd28a",
            "default_network_acl_id": "acl-0a3a5097d1f8dd28a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a3a5097d1f8dd28a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "778465394744",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-03d8be5abbcbd2770",
              "subnet-07e9d397057821870",
              "subnet-089d21a2f7e7cc25f",
              "subnet-0c46590c698adefd7"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:route-table/rtb-02bb770dfd198cd43",
            "default_route_table_id": "rtb-02bb770dfd198cd43",
            "id": "rtb-02bb770dfd198cd43",
            "owner_id": "778465394744",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:security-group/sg-0c5ea16fe23a853f1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c5ea16fe23a853f1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "778465394744",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dda59327fa7a523",
            "arn": "arn:aws:ec2:us-east-1:778465394744:elastic-ip/eipalloc-05dda59327fa7a523",
            "domain": "vpc",
            "id": "eipalloc-05dda59327fa7a523",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-147-187-37.compute-1.amazonaws.com",
            "public_ip": "54.147.187.37",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-us-east-1a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:internet-gateway/igw-05883a5c33229d164",
            "id": "igw-05883a5c33229d164",
            "owner_id": "778465394744",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dda59327fa7a523",
            "association_id": "eipassoc-0e9ecc173d08f347e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-025186567b5ee184e",
            "network_interface_id": "eni-0c77cd138b0229f90",
            "private_ip": "10.0.1.122",
            "public_ip": "54.147.187.37",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e9d397057821870",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee94c6d1a30347821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-025186567b5ee184e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ee94c6d1a3034782",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0ee94c6d1a3034782"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05883a5c33229d164",
            "id": "r-rtb-01cc9bc467accc5381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01cc9bc467accc538",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01cc9bc467accc538"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:route-table/rtb-0ee94c6d1a3034782",
            "id": "rtb-0ee94c6d1a3034782",
            "owner_id": "778465394744",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "id": "rtb-0ee94c6d1a3034782",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:route-table/rtb-01cc9bc467accc538",
            "id": "rtb-01cc9bc467accc538",
            "owner_id": "778465394744",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "id": "rtb-01cc9bc467accc538",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7db47c03687932c",
            "region": "us-east-1",
            "route_table_id": "rtb-0ee94c6d1a3034782",
            "subnet_id": "subnet-0c46590c698adefd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaba43f2c2e4392b",
            "region": "us-east-1",
            "route_table_id": "rtb-0ee94c6d1a3034782",
            "subnet_id": "subnet-03d8be5abbcbd2770"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d394a6ba0b96fbc",
            "region": "us-east-1",
            "route_table_id": "rtb-01cc9bc467accc538",
            "subnet_id": "subnet-07e9d397057821870"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5185ce3e7974703",
            "region": "us-east-1",
            "route_table_id": "rtb-01cc9bc467accc538",
            "subnet_id": "subnet-089d21a2f7e7cc25f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:subnet/subnet-0c46590c698adefd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c46590c698adefd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778465394744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "id": "subnet-0c46590c698adefd7",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:subnet/subnet-03d8be5abbcbd2770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d8be5abbcbd2770",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778465394744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "id": "subnet-03d8be5abbcbd2770",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:subnet/subnet-07e9d397057821870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e9d397057821870",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778465394744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "id": "subnet-07e9d397057821870",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:subnet/subnet-089d21a2f7e7cc25f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089d21a2f7e7cc25f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778465394744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0de9fb5a16a79d18a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "id": "subnet-089d21a2f7e7cc25f",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778465394744:vpc/vpc-0de9fb5a16a79d18a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3a5097d1f8dd28a",
            "default_route_table_id": "rtb-02bb770dfd198cd43",
            "default_security_group_id": "sg-0c5ea16fe23a853f1",
            "dhcp_options_id": "dopt-03775ef755fe52c46",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de9fb5a16a79d18a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bb770dfd198cd43",
            "owner_id": "778465394744",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-for-eks",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "778465394744",
            "id": "vpc-0de9fb5a16a79d18a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}